# osmo-hlr

./: .gitignore  Makefile.am  README.md  TODO-RELEASE  configure.ac  libosmo-gsup-client.pc.in  libosmo-mslookup.pc.in
contrib/: Makefile.am  jenkins.sh  osmo-hlr-post-upgrade.sh  osmo-hlr.spec  osmo-hlr.spec.in
contrib/dgsm/: Makefile.am  esme_dgsm.py  freeswitch_dialplan_dgsm.py  osmo-mslookup-pipe.py  osmo-mslookup-socket.py
contrib/systemd/: Makefile.am  osmo-hlr.service
debian/: changelog  control  copyright  libosmo-gsup-client-dev.install  libosmo-gsup-client0.install  libosmo-mslookup-dev.install  libosmo-mslookup1.install  osmo-hlr-doc.install  osmo-hlr.install  osmo-hlr.service  osmo-mslookup-utils.install  postinst  rules
doc/: Makefile.am
doc/examples/: Makefile.am  osmo-hlr-dgsm.cfg  osmo-hlr.cfg
doc/manuals/: Makefile  Makefile.am  example_subscriber_add_update_delete.vty  example_subscriber_aud2g.ctrl  example_subscriber_aud3g.ctrl  example_subscriber_cs_ps_enabled.ctrl  example_subscriber_info.ctrl  example_subscriber_msisdn.ctrl  osmohlr-usermanual.adoc  osmohlr-vty-reference.xml  regen_doc.sh
doc/manuals/chapters/: Makefile  control.adoc  dgsm.adoc  overview.adoc  proxy_cache.adoc  proxy_cache_attach.ladder  proxy_cache_attach.msc  proxy_cache_more_tuples.ladder  proxy_cache_more_tuples.msc  proxy_cache_periodic_lu.ladder  proxy_cache_periodic_lu.msc  proxy_cache_tuple_cache_dry.ladder  proxy_cache_tuple_cache_dry.msc  proxy_cache_umts_aka_resync.ladder  proxy_cache_umts_aka_resync.msc  running.adoc  subscribers.adoc  ussd.adoc
doc/manuals/vty/: hlr_vty_reference.xml
doc/sequence_charts/: Makefile.am  proxy_cache.dot  proxy_cache__mm_fsm.dot  proxy_cache__to_home_hlr_fsm.dot
include/: Makefile.am
include/osmocom/: Makefile.am
include/osmocom/gsupclient/: cni_peer_id.h  gsup_client.h  gsup_client_mux.h  gsup_peer_id.h  gsup_req.h  ipa_name.h  version.h.tpl
include/osmocom/hlr/: Makefile.am  auc.h  ctrl.h  db.h  dgsm.h  gsup_router.h  gsup_server.h  hlr.h  hlr_sms.h  hlr_ussd.h  hlr_vty.h  imsi_pseudo.h  logging.h  lu_fsm.h  luop.h  mslookup_server.h  mslookup_server_mdns.h  proxy.h  proxy_broken_link_cache.h  proxy_mm.h  remote_hlr.h  sms_over_gsup.h  timestamp.h
include/osmocom/mslookup/: Makefile.am  mdns.h  mdns_msg.h  mdns_rfc.h  mdns_sock.h  mslookup.h  mslookup_client.h  mslookup_client_fake.h  mslookup_client_mdns.h  version.h.tpl
sql/: Makefile.am  hlr.sql  hlr_data.sql  upgrade_v1_to_v2.sql  upgrade_v2_to_v3.sql
src/: Makefile  Makefile.am  auc.c  ctrl.c  ctrl.h  db.c  db.h  db_auc.c  db_bootstrap.sed  db_debug.c  db_hlr.c  db_imsi_pseudo.c  db_sql2c.sed  db_test.c  dbd_decode_binary.c  dgsm.c  dgsm.h  dgsm_vty.c  global_title.c  global_title.h  gsup_router.c  gsup_router.h  gsup_send.c  gsup_server.c  gsup_server.h  hlr.c  hlr.h  hlr_db_tool.c  hlr_sms.c  hlr_ss_ussd.c  hlr_ss_ussd.h  hlr_ussd.c  hlr_ussd.h  hlr_vty.c  hlr_vty.h  hlr_vty_subscr.c  hlr_vty_subscr.h  logging.c  logging.h  lu_fsm.c  (+16 more)
src/gsupclient/: Makefile.am  cni_peer_id.c  gsup_client.c  gsup_client_mux.c  gsup_peer_id.c  gsup_req.c  gsup_test_client.c  ipa_name.c
src/mslookup/: Makefile.am  mdns.c  mdns_msg.c  mdns_rfc.c  mdns_sock.c  mslookup.c  mslookup_client.c  mslookup_client_fake.c  mslookup_client_mdns.c  osmo-mslookup-client.c
tests/: Makefile.am  ctrl_test_runner.py  test_nodes.vty  test_subscr_create_on_demand.vty  test_subscriber.ctrl  test_subscriber.sql  test_subscriber.vty  test_subscriber.vty.sql  test_subscriber_errors.ctrl  test_usse.vty  testsuite.at
tests/auc/: Makefile.am  auc_3g_test.c  auc_3g_test.err  auc_test.c  auc_test.err  auc_ts_55_205_test_sets.err
tests/auc/gen_ts_55_205_test_sets/: func_template.c  main_template.c  pdftxt_2_c.py
tests/db/: Makefile.am  db_test.c  db_test.err  db_test.ok
tests/db_upgrade/: Makefile.am  create_subscribers.vty  create_subscribers_step2.sql  db_upgrade_test.ok  db_upgrade_test.sh  hlr_db_v0.sql  osmo-hlr.cfg
tests/gsup/: Makefile.am  gsup_test.c  gsup_test.err  gsup_test.ok
tests/gsup_server/: Makefile.am  gsup_server_test.c
tests/imsi_pseudo/: imsi_pseudo.vty
tests/mslookup/: Makefile.am  mdns_test.c  mdns_test.err  mslookup_client_mdns_test.c  mslookup_client_mdns_test.err  mslookup_client_test.c  mslookup_client_test.err  mslookup_test.c  mslookup_test.err
tests/mslookup_manual_test/: Makefile.am  fake_msc.c  osmo-hlr-1.cfg  osmo-hlr-2.cfg  run.sh
