SUBDIRS = osmocom

nobase_include_HEADERS = \
	osmocom/gsupclient/ipa_name.h \
	osmocom/gsupclient/gsup_client.h \
	osmocom/gsupclient/gsup_req.h \
	osmocom/mslookup/mdns.h \
	osmocom/mslookup/mdns_sock.h \
	osmocom/mslookup/mslookup_client_fake.h \
	osmocom/mslookup/mslookup_client.h \
	osmocom/mslookup/mslookup_client_mdns.h \
	osmocom/mslookup/mslookup.h \
	$(NULL)
