noinst_HEADERS = \
	auc.h \
	ctrl.h \
	db.h \
	dgsm.h \
	gsup_router.h \
	gsup_server.h \
	hlr.h \
	hlr_ussd.h \
	hlr_vty.h \
	hlr_vty_subscr.h \
	logging.h \
	lu_fsm.h \
	mslookup_server.h \
	mslookup_server_mdns.h \
	proxy.h \
	proxy_mm.h \
	proxy_db.h \
	rand.h \
	remote_hlr.h \
	timestamp.h \
	$(NULL)
